--- a/html/captcha.html
+++ b/html/captcha.html
@@ -1,21 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-
+{{define "content"}}
+<div style="display:inline-block">
 <form action =  "get" method="GET">
-        <script type="text/javascript" src="http://www.google.com/recaptcha/api/challenge?k=6LdUtvUSAAAAAFHAD6cT4iBwBh_8HPHXYGb2hgQf">
-        </script>
-        <noscript>
-            <iframe src="http://www.google.com/recaptcha/api/noscript?k=6LdUtvUSAAAAAFHAD6cT4iBwBh_8HPHXYGb2hgQf" height="300" width="500" frameborder="0">
-            </iframe>
-            <br>
-            <textarea name="recaptcha_challenge_field" rows="3" cols="40"> </textarea>
-            <input type="hidden" name="recaptcha_response_field" value="manual_challenge">
-        </noscript><input type="hidden" name="email_uid" value="{{.Key}}">
-    </form>
-</body>
-</html>
+    <script type="text/javascript" src="http://www.google.com/recaptcha/api/challenge?k=6LdUtvUSAAAAAFHAD6cT4iBwBh_8HPHXYGb2hgQf">
+    </script>
+    <noscript>
+        <iframe src="http://www.google.com/recaptcha/api/noscript?k=6LdUtvUSAAAAAFHAD6cT4iBwBh_8HPHXYGb2hgQf" height="300" width="500" frameborder="0">
+        </iframe>
+        <br>
+        <textarea name="recaptcha_challenge_field" rows="3" cols="40"> </textarea>
+        <input type="hidden" name="recaptcha_response_field" value="manual_challenge">
+    </noscript><input type="hidden" name="email_uid" value="{{.Key}}">
+    <button type="submit">Отправить</button>
+</form>
+</div>
+{{end}}
