--- a/html/email.html
+++ b/html/email.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{{define "content"}}
     <input type="email" value="{{.Email}}"/>
-</body>
-</html>
+{{end}}
