--- a/html/url.html
+++ b/html/url.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{{define "content"}}
     <input  type="url" name="access_url" value="http://localhost:8080/{{.Key}}"/>
-</body>
-</html>
+{{end}}
