--- a/html/url.html
+++ b/html/url.html
@@ -1,3 +1,4 @@
 {{define "content"}}
-    <input  type="url" name="access_url" value="http://localhost:8080/{{.Key}}"/>
+    <p>Уникальная защитная ссылка для вашего E-mail</p>
+    <input  type="url" name="access_url" value="http://localhost:80/{{.Key}}"/>
 {{end}}
