--- a/html/captcha.html
+++ b/html/captcha.html
@@ -1,16 +1,19 @@
 {{define "content"}}
+<p>Чтобы получить доступ к E-mail, пожалуйста, введите защитный код с картинки.</p>
+{{if .CaptchaError}}<p class="error">Чтобы получить доступ к E-mail, пожалуйста, введите защитный код с картинки.</p>{{end}}
 <div style="display:inline-block">
-<form action =  "get" method="GET">
-    <script type="text/javascript" src="http://www.google.com/recaptcha/api/challenge?k=6LdUtvUSAAAAAFHAD6cT4iBwBh_8HPHXYGb2hgQf">
-    </script>
-    <noscript>
-        <iframe src="http://www.google.com/recaptcha/api/noscript?k=6LdUtvUSAAAAAFHAD6cT4iBwBh_8HPHXYGb2hgQf" height="300" width="500" frameborder="0">
-        </iframe>
-        <br>
-        <textarea name="recaptcha_challenge_field" rows="3" cols="40"> </textarea>
-        <input type="hidden" name="recaptcha_response_field" value="manual_challenge">
-    </noscript><input type="hidden" name="email_uid" value="{{.Key}}">
-    <button type="submit">Отправить</button>
-</form>
+    <form action =  "get" method="GET">
+        <script type="text/javascript" src="http://www.google.com/recaptcha/api/challenge?k=6LdUtvUSAAAAAFHAD6cT4iBwBh_8HPHXYGb2hgQf">
+        </script>
+        <noscript>
+            <iframe src="http://www.google.com/recaptcha/api/noscript?k=6LdUtvUSAAAAAFHAD6cT4iBwBh_8HPHXYGb2hgQf" height="300" width="500" frameborder="0">
+            </iframe>
+            <br>
+            <textarea name="recaptcha_challenge_field" rows="3" cols="40"> </textarea>
+            <input type="hidden" name="recaptcha_response_field" value="manual_challenge">
+        </noscript>
+        <input type="hidden" name="email_uid" value="{{.Key}}">
+        <button type="submit">Отправить</button>
+    </form>
 </div>
 {{end}}
