--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,20 @@
 {{define "content"}}
     <form action = "add" method="GET">
-    	<p>Введите e-mail, для которого хотите получить защищенную ссылку.</p>
-        <input name="email" type="email" /><br/>
+    	<p>Введите e-mail, для которого желаете получить уникальную защищенную ссылку.</p>
+        {{if .EmailError}}<p class="error">* Введите корректный e-mail адресс</p>{{end}}
+        <input name="email" type="email" placeholder="Ваш e-mail"/><br/>
+        {{if .CaptchaError}}<p class="error">* Введите правильный код с картинки </p>{{end}}
+        <div style="display:inline-block;padding-top:14px;padding-bottom:14px;">
+        <script type="text/javascript" src="http://www.google.com/recaptcha/api/challenge?k=6LdUtvUSAAAAAFHAD6cT4iBwBh_8HPHXYGb2hgQf">
+        </script>
+        <noscript>
+            <iframe src="http://www.google.com/recaptcha/api/noscript?k=6LdUtvUSAAAAAFHAD6cT4iBwBh_8HPHXYGb2hgQf" height="300" width="500" frameborder="0">
+            </iframe>
+            <br>
+            <textarea name="recaptcha_challenge_field" rows="3" cols="40"> </textarea>
+            <input type="hidden" name="recaptcha_response_field" value="manual_challenge">
+        </noscript>
+        </div><br/>
         <button type="submit">Отправить</button>
     </form>
 {{end}}
