fixed index page to show email on fail and fixed some texts.

--- a/html/base.html
+++ b/html/base.html
@@ -3,7 +3,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Защита вашего E-mail с помощью Captcha для публикации на форумах, блогах, чатах, досках объявлений и других публичных местах</title>
     <style type="text/css">
 
 		div.ext-box { display: table; width:100%;}
@@ -95,7 +95,7 @@
 			<a href="/"><img src="images/logo.png" style="padding-left:8px;"/></a>
 		</div>
 		<div class="int-box" style="padding-left:14px">
-			<a href="/" class="logo-text">Надежная защита вашего E-mail при публикации на форумах, блогах, досках объявлений и других публичных местах</a>
+			<a href="/" class="logo-text">Надежная защита вашего E-mail с помощью Капчи</a>
 		</div>
 		<div style="clear:both;"></div>
 		
