--- a/html/base.html
+++ b/html/base.html
@@ -90,6 +90,17 @@
     </style>
 </head>
 <body style="margin:0;padding:0;background-color:#858585;height:100%">
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-52506605-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+
 	<div class="ext-box" style="background-color: #272822;">
 		<div class="int-box" style="height:38px;width:150px;">
 			<a href="/"><img src="images/logo.png" style="padding-left:8px;"/></a>
