--- a/html/base.html
+++ b/html/base.html
@@ -6,6 +6,11 @@
     <title>Защита вашего E-mail с помощью Captcha для публикации на форумах, блогах, чатах, досках объявлений и других публичных местах</title>
     <style type="text/css">
 
+        body {
+            font-family: arial,sans-serif;
+            font-size: 12px;
+        }
+
 		div.ext-box { display: table; width:100%;}
 		div.int-box { display: table-cell; vertical-align: middle; margin:0; padding:0;}
 
@@ -49,6 +54,10 @@
         a {
             font-family: verdana,sans-serif;
             font-size: 16px;
+        }
+
+        a.contact-mail {
+            font-size: 12px;
         }
 
 		button {
@@ -118,7 +127,7 @@
 	</div>
 
       <footer>
-        &copy; Copyright 2014 by Alexander Katasonov
+        &copy; Copyright 2014 by <a class="contact-mail" href="http://antibot.me/G3Mntv0k">Alexander Katasonov
       </footer>	
 
 </body>
