--- a/html/base.html
+++ b/html/base.html
@@ -88,13 +88,18 @@
 		    vertical-align: middle;
 		}
 
-        footer {
-            position : absolute;
-            bottom : 0;
-            width: 100%;
-            text-align: center;
-            height : 30px;
-            margin-top : 30px;
+        a.footer {
+            margin: 0pt;
+            padding: 0pt;
+            font-size: 			  110%;
+            font-family:		  Comic Sans, Comic Sans MS, cursive;
+            white-space: nowrap;
+            color:black;
+            background-color: transparent;
+
+            font-family: 'Arial';
+            font-size: 12px;
+            white-space: nowrap;
         }
     </style>
 </head>
@@ -118,7 +123,7 @@
 			<a href="/" class="logo-text">Надежная защита вашего E-mail с помощью Капчи</a>
 		</div>
 		<div style="clear:both;"></div>
-		
+
 	</div>
 	<div class="ext-box" style="padding-top:3%;">
 		<div class="int-box" style="text-align:center;">
@@ -126,9 +131,13 @@
 		</div>
 	</div>
 
-      <footer>
-        &copy; Copyright 2014 by <a class="contact-mail" href="http://antibot.me/G3Mntv0k">Alexander Katasonov
-      </footer>	
+    <div style="position: fixed; bottom: 0px; left: 0px; background-image: url('images/footer_bg.jpg');
+top: auto; right: auto; width: 100%;
+height: 15px;text-align:center;  font-family: 'Arial';
+font-size: 12px;
+  white-space: nowrap;">
+        2014 © <a href="http://antibot.me/G3Mntv0k" class="footer">Александр Катасонов</a> | Все права защищены
+    </div>
 
 </body>
 </html>
