Added modifications related to email+link implementation

--- a/html/base.html
+++ b/html/base.html
@@ -120,7 +120,7 @@
 			<a href="/"><img src="images/logo.png" style="padding-left:8px;"/></a>
 		</div>
 		<div class="int-box" style="padding-left:14px">
-			<a href="/" class="logo-text">Надежная защита вашего E-mail с помощью Капчи</a>
+			<a href="/" class="logo-text">Надежная защита E-mail и ссылок от Спам-ботов</a>
 		</div>
 		<div style="clear:both;"></div>
 
