--- a/html/email.html
+++ b/html/email.html
@@ -1,6 +1,4 @@
 {{define "content"}}
-    <p>Контактный E-mail для копирования</p>
-    <input type="email" value="{{.Email}}"/><br/>
-    <p>или как ссылка</p>
-    <a href="mailto:{{.Email}}">{{.Email}}</a>
+    <p>Защищенный E-mail или ссылка</p>
+    <input type="text" value="{{.Email}}"/><br/>
 {{end}}
