--- a/html/url.html
+++ b/html/url.html
@@ -1,4 +1,4 @@
 {{define "content"}}
-    <p>Данная ссылка доступа к вашему E-mail защищена от спам-ботов и может размещаться открыто в Интернет:</p>
+    <p>Cсылка доступа, защищенная от спам-ботов</p>
     <input  type="url" name="access_url" value="{{.Host}}/{{.Key}}"/>
 {{end}}
