Fixed text on captcha page.

--- a/html/captcha.html
+++ b/html/captcha.html
@@ -1,5 +1,5 @@
 {{define "content"}}
-<p>Чтобы получить доступ к E-mail, пожалуйста, введите защитный код с картинки.</p>
+<p>Введите код с картинки для доступа к защищенным E-mail или ссылке</p>
 {{if .CaptchaError}}<p class="error">Введите код правильно</p>{{end}}
 <div style="display:inline-block">
     <form action =  "get" method="GET">
