Added auto select and show help hint popup feature on pages.

--- a/html/base.html
+++ b/html/base.html
@@ -27,6 +27,8 @@
 
     </script>
 
+    <script type="text/javascript">function SelectText(field){field.focus();field.select();}</script>
+
 
     <div id="head">
         <div id="header">
