--- a/html/url.html
+++ b/html/url.html
@@ -1,6 +1,10 @@
 {{define "content"}}
 <form id="form" action = "add" method="GET">
-    <input  id="input" type="text" name="access_url" value="{{.Host}}/{{.Key}}"  tabindex="1" size="40"/>
+    <div id="CtrlCHint" class="GJUPD0RBBP GJUPD0RBDJ" style="display: none;">
+        <span class="GJUPD0RBAP">Нажмите CTRL-C, чтобы скопировать</span>
+        <span class="GJUPD0RBPO"></span>
+    </div>
+    <input  id="input" type="text" readonly="readonly" name="access_url" value="{{.Host}}/{{.Key}}"  tabindex="1" size="40" onclick='SelectText(this);var pos = $(this).position();var width = $(this).outerWidth();var elWidth=$("#CtrlCHint").width();$("#CtrlCHint").css({position: "absolute", top: (pos.top-29) + "px", left: (pos.left + width/2 - elWidth/2) + "px"}).show();'/>
     <div id="divider">
         <a href="/">Защитить еще один E-mail или ссылку</a>
     </div>
