Fixed some texts on pages.

--- a/html/captcha.html
+++ b/html/captcha.html
@@ -1,7 +1,7 @@
 {{define "content"}}
 <div style="text-align:center;">
     <form id="form" action =  "get" method="GET">
-        <p>Для доступа введите код с картинки</p>
+        <p>Для доступа к ссылке введите код</p>
         <div style="display:inline-block">
         <script type="text/javascript" src="http://www.google.com/recaptcha/api/challenge?k=6LdUtvUSAAAAAFHAD6cT4iBwBh_8HPHXYGb2hgQf">
         </script>
@@ -18,6 +18,6 @@
         <input id="click" type="submit" type="submit" tabindex="2" value="Отправить">
     </form>
 </div>
-<p class="descp">Ссылка или e-mail адрес, к которым вы желаете получить доступ, была защищена нашим сервисом от спам-ботов. Просим вас ввести защитный код, чтобы подтвердить, что вы не бот.</p>
+<p class="descp">Ссылка или e-mail адрес, к которому вы желаете получить доступ, защищен от спам-ботов нашим сервисом. Просим вас ввести защитный код, чтобы подтвердить, что вы не бот.</p>
 
 {{end}}
