--- a/html/emailnotfound.html
+++ b/html/emailnotfound.html
@@ -1,3 +1,5 @@
 {{define "content"}}
-    <p>Email для кода "{{.Key}}" возможно был удален владельцем </p>
+<form id="form" action = "add" method="GET">
+    <p>Email для кода "{{.Key}}" был удален владельцем </p>
+</form>
 {{end}}
