Now if there is a link then use as link on result page otherwise use input box with email.

--- a/html/email.html
+++ b/html/email.html
@@ -4,7 +4,11 @@
         <span class="GJUPD0RBAP">Нажмите CTRL-C, чтобы скопировать</span>
         <span class="GJUPD0RBPO"></span>
     </div>
+    {{if .IsEmail}}
     <input id="input" readonly="readonly" type="text" value="{{.Email}}" onclick='SelectText(this);var pos = $(this).position();var width = $(this).outerWidth();var elWidth=$("#CtrlCHint").width();$("#CtrlCHint").css({position: "absolute", top: (pos.top-29) + "px", left: (pos.left + width/2 - elWidth/2) + "px"}).show();'/><br/>
+    {{else}}
+    <a href="{{.Email}}">{{.Email}}</a> <br/>
+    {{end}}
 </form>
 <p class="descp">Поздравляем! Вы ввели правильный код. Данная ссылка была защищена нашим сервисом от ботов. Теперь вы можете её скопировать и использовать.</p>
 {{end}}
