fixed captcha heading text

--- a/html/captcha.html
+++ b/html/captcha.html
@@ -1,7 +1,7 @@
 {{define "content"}}
 <div style="text-align:center;">
     <form id="form" action =  "get" method="GET">
-        <p>Для доступа к ссылке введите код</p>
+        <p>Для доступа к email/ссылке введите код</p>
         <div style="display:inline-block">
         <script type="text/javascript" src="http://www.google.com/recaptcha/api/challenge?k=6LdUtvUSAAAAAFHAD6cT4iBwBh_8HPHXYGb2hgQf">
         </script>
