Fixed some texts and design elements

--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
         {{if .EmailError}}<p class="error">* Введите корректный e-mail адрес или ссылку</p>{{end}}
         <input id="click" type="submit" type="submit" tabindex="2" value="Защитить">
     </form>
-    <p class="descp">Часто приходится оставлять свой email на форумах, блогах и других сайтах. Это приводит к тому, что мэйл попадает к спамерам и индексируется поисковиками. Antibot.me решает эту проблему скрывая ваш email от лишних глаз и ботов под специальной ссылкой с капча-кодом. </p>
+    <p class="descp">Часто приходится оставлять свои email или ссылки на форумах, блогах и других сайтах. Это приводит к тому, что они попадают к спамерам и индексируются поисковиками типа Yandex, Google. Antibot.me решает эту проблему скрывая ваш email от лишних глаз и ботов под специальной ссылкой с капча-кодом. </p>
     <p class="descp">Для вашего email или любого URL сервис сгенерирует постоянную короткую ссылку доступа. Переходя по ней необходимо ввести стандартный капча-код для доступа к вашему email/ссылке.</p>
     <p class="descp">Её вы можете размещать в открытом виде на форумах, блогах, в чатах и т.д. не опасаясь спам-ботов. </p>
     <p class="descp">Ссылка доступа не имеет ограничений и сохраняется навсегда. </p>
