--- a/html/base.html
+++ b/html/base.html
@@ -27,7 +27,21 @@
 
     </script>
 
-    <script type="text/javascript">function SelectText(field){field.focus();field.select();}</script>
+    <script type="text/javascript">
+        function setSrcQuery(e, q) {
+            var src = e.src;
+            var p = src.indexOf('?');
+            if (p >= 0) {
+                src = src.substr(0, p);
+            }
+            e.src = src + "?" + q
+        }
+        function SelectText(field){field.focus();field.select();}
+        function reload() {
+            setSrcQuery(document.getElementById('image'), "reload=" + (new Date()).getTime());
+            return false;
+        }
+    </script>
 
 
     <div id="head">
