Fixed text on the index page

--- a/html/index.html
+++ b/html/index.html
@@ -4,8 +4,8 @@
         {{if .EmailError}}<p class="error">* Введите корректный e-mail адрес или ссылку</p>{{end}}
         <input id="click" type="submit" type="submit" tabindex="2" value="Защитить">
     </form>
-    <p class="descp">Часто приходится оставлять свои email или ссылки на форумах, блогах и других сайтах. Это приводит к тому, что они попадают к спамерам и индексируются поисковиками типа Yandex, Google. Antibot.me решает эту проблему скрывая ваш email от лишних глаз и ботов под специальной ссылкой с капча-кодом. </p>
-    <p class="descp">Для вашего email или любого URL сервис сгенерирует постоянную короткую ссылку доступа. Переходя по ней необходимо ввести стандартный капча-код для доступа к вашему email/ссылке.</p>
-    <p class="descp">Её вы можете размещать в открытом виде на форумах, блогах, в чатах и т.д. не опасаясь спам-ботов. </p>
-    <p class="descp">Ссылка доступа не имеет ограничений и сохраняется навсегда. </p>
+    <p class="descp">Часто приходится оставлять свой email или ссылки на форумах, блогах и других сайтах. Это приводит к тому, что они попадают к спамерам и индексируются поисковиками типа Yandex и Google. Сервис Antibot.me решает эту проблему скрывая ваш email/ссылку от посторонних глаз и ботов под специальной короткой ссылкой с капча-кодом. </p>
+    <p class="descp">Для вашего email или любого URL сервис сгенерирует постоянную короткую antibot-ссылку доступа. Переходя по ней посетителю необходимо будет ввести стандартный капча-код для доступа к скрываемому email/ссылке.</p>
+    <p class="descp">Antibot-ссылку вы можете размещать в открытом виде на форумах, блогах, в чатах и т.д. не опасаясь спам-ботов. </p>
+    <p class="descp">Antibot ссылка не имеет ограничений и на навсегда сохраняется за вами. </p>
 {{end}}
