--- a/html/base.html
+++ b/html/base.html
@@ -8,7 +8,7 @@
           content="antibot, spam protection, защита от копирастеров, защита e-mail, спам email, spam email, spam-bot, copypast protection, защита, копипастер" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png" />
     <script type="text/javascript" src="http://yandex.st/jquery/1.4.4/jquery.min.js"></script>
 
     <script type="text/javascript" src="http://yandex.st/share/share.js" charset="utf-8"></script>
