--- a/html/base.html
+++ b/html/base.html
@@ -71,7 +71,7 @@
         {{template "content" .Content}}
     </div>
 
-        <div id="footer">Версия 1, © 2014 «<a href="http://antibot.me/G3Mntv0k">Alexander Katasonov</a>»</div>
+        <div id="footer">Версия 1, © 2014 «<a href="http://antibot.me/G3Mntv0k">Студия Александра Катасонова</a>»</div>
 
     </div>
 </body>
