Removed auto asigning http:// prefix to the non-emails added strings. This makes it possible to store any type of string information under the captcha.

--- a/html/email.html
+++ b/html/email.html
@@ -7,7 +7,7 @@
     {{if .IsEmail}}
     <input id="input" readonly="readonly" type="text" value="{{.Email}}" onclick='SelectTextAndShowHint(this);'/><br/>
     {{else}}
-    --->&nbsp;&nbsp; <a id="turl" href="{{.Email}}">{{.Email}}</a>&nbsp;&nbsp; <--- <br/>
+    --->&nbsp;&nbsp; <a id="turl" href="{{.EmailRef}}">{{.Email}}</a>&nbsp;&nbsp; <--- <br/>
     {{end}}
 </form>
 {{if .IsEmail}}
