fixed text on index page

--- a/html/index.html
+++ b/html/index.html
@@ -8,5 +8,5 @@
     <p class="descp">Часто приходится оставлять свой email или ссылки на форумах, блогах и других сайтах. Это приводит к тому, что они попадают к спамерам и индексируются поисковиками типа Yandex и Google. Сервис Antibot.me решает эту проблему скрывая ваш email/ссылку от посторонних глаз и ботов под специальной короткой ссылкой с капча-кодом. </p>
     <p class="descp">Для вашего email или любого URL сервис сгенерирует постоянную короткую antibot-ссылку доступа. Переходя по ней посетителю необходимо будет ввести стандартный капча-код для доступа к скрываемому email/ссылке.</p>
     <p class="descp">Antibot-ссылку вы можете размещать на форумах, блогах, в чатах и т.д. не опасаясь спам-ботов. </p>
-    <p class="descp">Antibot ссылка не имеет ограничений и на навсегда сохраняется за вами. </p>
+    <p class="descp">Antibot ссылка не имеет ограничений и навсегда сохраняется за вами. </p>
 {{end}}
